[package]
name = "kubernetes"
version = "0.2.0"
authors = ["Angus Lees <gus@inodes.org>"]
description = "A Kubernetes client library for Rust"
repository = "https://github.com/anguslees/kubernetes-rs"
readme = "README.md"
keywords = ["kubernetes"]
categories = ["api-bindings"]
license = "Apache-2.0"
edition = "2018"

[badges]
maintenance = {status = "actively-developed,experimental"}

[workspace]
members = [
   "client",
   "api",
   "apimachinery",
   "apimachinery_derive",
   "proxy",
]

[dependencies]
kubernetes_api = { path = "api" }
kubernetes_apimachinery = { path = "apimachinery" }
kubernetes_client = { path = "client" }
kubernetes_proxy = { path = "proxy" }

[dev-dependencies]
assert-json-diff = "^1"
base64 = "^0.10"
failure = "0.1"
futures-preview = "0.3.0-alpha.19"
har = "0.2"
log = "0.4"
pretty_env_logger = "0.3"
runtime = "0.3.0-alpha.7"
runtime-tokio = "0.3.0-alpha.6"
serde_json = "1.0"
pest = "^2.0"
pest_derive = "^2.0"
