[package]
name = "kubernetes_api"
version = "0.2.0"
authors = ["Angus Lees <gus@inodes.org>"]
description = "A Kubernetes API encoding for Rust"
repository = "https://github.com/anguslees/kubernetes-rs"
readme = "README.md"
keywords = ["kubernetes"]
categories = ["api-bindings"]
license = "Apache-2.0"
edition = "2018"

[badges]
maintenance = {status = "actively-developed,experimental"}

[dependencies]
async-trait = "0.1"
failure = "0.1.1"
futures-preview = "0.3.0-alpha.19"
http = "0.1"
kubernetes_apimachinery = {path = "../apimachinery"}
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
serde_yaml = "0.7"
