[package]
name = "kubernetes_apimachinery"
version = "0.2.0"
authors = ["Angus Lees <gus@inodes.org>"]
description = "A Kubernetes API encoding for Rust"
repository = "https://github.com/anguslees/kubernetes-rs"
readme = "README.md"
keywords = ["kubernetes"]
categories = ["api-bindings"]
license = "Apache-2.0"

[badges]
maintenance = {status = "actively-developed,experimental"}

[dependencies]
failure = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
kubernetes_api = { path = "../api" }
serde_test = "1.0"
serde_yaml = "0.7"
