[package]
name = "kubernetes_apimachinery"
version = "0.2.0"
authors = ["Angus Lees <gus@inodes.org>"]
description = "A Kubernetes API encoding for Rust"
repository = "https://github.com/anguslees/kubernetes-rs"
readme = "README.md"
keywords = ["kubernetes"]
categories = ["api-bindings"]
license = "Apache-2.0"
edition = "2018"

[badges]
maintenance = {status = "actively-developed,experimental"}

[features]
default = ["derive"]
derive = ["kubernetes_apimachinery_derive"]

[dependencies]
async-stream = "0.1"
async-trait = "0.1"
base64 = "0.9"
failure = "0.1.1"
futures-preview = "0.3.0-alpha.19"
http = "0.1"
kubernetes_apimachinery_derive = { optional = true, path = "../apimachinery_derive" }
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.5"

[dev-dependencies]
kubernetes_api = { path = "../api" }
serde_test = "1.0"
