[package]
name = "kubernetes_client"
version = "0.2.0"
authors = ["Angus Lees <gus@inodes.org>"]
description = "A Kubernetes client library for Rust"
repository = "https://github.com/anguslees/kubernetes-rs"
readme = "README.md"
keywords = ["kubernetes"]
categories = ["api-bindings"]
license = "Apache-2.0"

[badges]
maintenance = {status = "actively-developed,experimental"}

[dependencies]
failure = "0.1"
hyper = "0.12"
log = "0.4"
serde_json = "1.0"

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"