[package]
name = "kubernetes_client"
version = "0.2.0"
authors = ["Angus Lees <gus@inodes.org>"]
description = "A Kubernetes client library for Rust"
repository = "https://github.com/anguslees/kubernetes-rs"
readme = "README.md"
keywords = ["kubernetes"]
categories = ["api-bindings"]
license = "Apache-2.0"
edition = "2018"

[badges]
maintenance = {status = "actively-developed,experimental"}

[features]
default = ["hyperclient"]
hyperclient = ["hyper","hyper-tls","native-tls","openssl","futures-preview"]

[dependencies]
async-trait = "0.1"
bytes = "0.4"
dirs = "1.0"
failure = {version = "0.1", features = ["derive"]}
http = "0.1"
kubernetes_apimachinery = { path = "../apimachinery" }
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.7"

[dependencies.futures-preview]
version = "0.3.0-alpha.19"
optional = true
features = ["io-compat"]

[dependencies.hyper]
version = "0.12"
optional = true
# Disable "runtime" feature, which hardcodes tokio
default-features = false

[dependencies.hyper-tls]
version = "0.3"
optional = true

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.openssl]
version = "0.10"
optional = true
