[package]
name = "kubernetes_holding"
version = "0.2.0"
authors = ["Angus Lees <gus@inodes.org>"]
description = "Code that is being moved to better homes"
repository = "https://github.com/anguslees/kubernetes-rs"
readme = "README.md"
keywords = ["kubernetes"]
categories = ["api-bindings"]
license = "Apache-2.0"

[badges]
maintenance = {status = "actively-developed,experimental"}

[dependencies]
dirs = "4.0"
url = "2.2"
hyper = "0.12"
hyper-tls = "0.3"
native-tls = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde_urlencoded = "0.7"
futures = "0.1.21"
tokio = "0.1.7"
tokio-core = "0.1.18"
failure = "0.1.8"
base64 = "0.22"
log = "0.4"
openssl = "0.10"
kubernetes_api = { path = "../api" }

[dev-dependencies]
pretty_env_logger = "0.4"
serde_test = "1.0"
